syntax = "proto3";

package ocpcCpcBid;
message SingleOcpcMinBid {
    int64 unitid = 1;
    double minBid = 2;
    double postCvr = 3;
}

message OcpcMinBidList {
    repeated SingleOcpcMinBid adrecord = 1;
}